<resources>
    <string name="app_name">CulinaryCompanion_AnaCroitor</string>
    <string name="breakfast">Breakfast</string>
    <string name="brunch">Brunch</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="dessert">Dessert</string>
    <string name="other">Other</string>
    <string name="add_new_recipe">Add New Recipe</string>
    <string name="culinary_companion">Culinary Companion</string>
    <string name="menu_icon">Menu</string>
    <string name="profile_icon">Profile</string>
    <string name="breakfast_recipe">Breakfast Recipe</string>
    <string name="recipe_1">Recipe 1</string>
    <string name="recipe_2">Recipe 2</string>
    <string name="recipe_3">Recipe 3</string>
    <string name="recipe_4">Recipe 4</string>
    <string name="recipe_5">Recipe 5</string>
    <string name="recipe_6">Recipe 6</string>
    <string name="recipe_7">Recipe 7</string>
    <string name="recipe_8">Recipe 8</string>
    <string name="ingredients_list">Ingredients List</string>
    <string name="cooking_instructions">Cooking Instructions</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="go_back">Go Back</string>
    <string name="next_recipe">Next Recipe</string>
    <string name="create_edit_recipe">Create/Edit Recipe</string>
    <string name="enter_recipe_name">Enter recipe name</string>
    <string name="enter_ingredients">Enter ingredients</string>
    <string name="enter_cooking_instructions">Enter cooking instructions</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="cancel">Cancel</string>
    <string name="label_recipe_title_placeholder">Recipe Title</string>
</resources>