<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeListActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/breakfast_recipe"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Recipe Buttons -->
    <GridLayout
        android:id="@+id/gridRecipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/recipe1"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/recipe_1"/>

        <Button
            android:id="@+id/recipe2"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/recipe_2"/>

        <Button
            android:id="@+id/recipe3"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/recipe_3"/>

        <Button
            android:id="@+id/recipe4"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/recipe_4"/>

        <Button
            android:id="@+id/recipe5"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/recipe_5"/>

        <Button
            android:id="@+id/recipe6"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/recipe_6"/>

        <Button
            android:id="@+id/recipe7"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/recipe_7"/>

        <Button
            android:id="@+id/recipe8"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/recipe_8"/>
    </GridLayout>

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_new_recipe"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Go Back Button -->
    <Button
        android:id="@+id/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>