<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreenActivity">

    <!-- Navigation Menu Icon -->
    <ImageView
        android:id="@+id/ivMenu"
        android:layout_width="68dp"
        android:layout_height="65dp"
        android:contentDescription="@string/menu_icon"
        android:padding="16dp"
        android:src="@drawable/baseline_menu_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- User Profile Icon -->
    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="77dp"
        android:layout_height="70dp"
        android:contentDescription="@string/profile_icon"
        android:padding="16dp"
        android:src="@drawable/baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- App Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:padding="16dp"
        android:text="@string/culinary_companion"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Recipe Category Buttons -->
    <GridLayout
        android:id="@+id/gridCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnDinner"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/dinner" />

        <Button
            android:id="@+id/btnLunch"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/lunch" />

        <Button
            android:id="@+id/btnBrunch"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/brunch" />

        <Button
            android:id="@+id/btnBreakfast"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/breakfast" />

        <Button
            android:id="@+id/btnOther"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/other" />

        <Button
            android:id="@+id/btnDesserts"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/dessert" />
    </GridLayout>

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_new_recipe"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>